<resources>
    <string name="app_name">Orbot</string>
    <string name="app_description">Orbot is a free proxy app that empowers other apps to use the internet more securely. Orbot uses Tor to encrypt your Internet traffic and then hides it by bouncing through a series of computers around the world. Tor is free software and an open network that helps you defend against a form of network surveillance that threatens personal freedom and privacy, confidential business activities and relationships, and state security known as traffic analysis.</string>
    <string name="menu_settings">Orbot Settings</string>
    <string name="system_vpn_settings">Android VPN Settings</string>
    <string name="menu_log">Log</string>
    <string name="menu_about">About</string>
    <string name="menu_exit">Exit</string>
    <string name="wizard_details_msg">Orbot is an open-source application that contains Tor, IPtProxy (Lyrebird, Meek, Snowflake), hev-socks5-tunnel and LibEvent. It provides a VPN tunnel, a local HTTP Connect proxy (HTTPS only on port 8118) and a SOCKS proxy (9050) into the Tor network.</string>
    <string name="pref_general_group">General</string>
    <string name="pref_start_boot_title">Start Orbot on Boot</string>
    <string name="pref_start_boot_summary">Automatically start Orbot and connect Tor when your Android device boots</string>
    <string name="pref_node_configuration">Node Configuration</string>
    <string name="pref_node_configuration_summary">These are advanced settings that can reduce your anonymity</string>
    <string name="pref_entrance_node">Entrance Nodes</string>
    <string name="pref_entrance_node_summary">Fingerprints, nicks, countries and addresses for the first hop</string>
    <string name="pref_entrance_node_dialog">Enter Entrance Nodes</string>
    <string name="pref_proxy_title">Outbound Network Proxy (Optional)</string>
    <string name="pref_proxy_type_title">Outbound Proxy Type</string>
    <string name="pref_proxy_type_summary">Protocol to use for proxy server</string>
    <string name="pref_proxy_no_proxy">No Proxy</string>
    <string name="pref_proxy_host_title">Outbound Proxy Host</string>
    <string name="pref_proxy_host_summary">Proxy Server hostname</string>
    <string name="pref_proxy_port_title">Outbound Proxy Port</string>
    <string name="pref_proxy_port_summary">Proxy Server port</string>
    <string name="pref_proxy_username_title">Outbound Proxy Username</string>
    <string name="pref_proxy_username_summary">Proxy Username (Optional)</string>
    <string name="pref_proxy_password_title">Outbound Proxy Password</string>
    <string name="pref_proxy_password_summary">Proxy Password (Optional)</string>
    <string name="pref_proxy_ss_title">ShadowSocks Configuration URL</string>
    <string name="pref_proxy_ss_summary">Full ShadowSocks configuration URL beginning with "ss://"</string>
    <string name="error">Error</string>
    <string name="exit_nodes">Exit Nodes</string>
    <string name="fingerprints_nicks_countries_and_addresses_for_the_last_hop">Fingerprints, nicks, countries and addresses for the last hop</string>
    <string name="enter_exit_nodes">Enter Exit Nodes</string>
    <string name="exclude_nodes">Exclude Nodes</string>
    <string name="fingerprints_nicks_countries_and_addresses_to_exclude">Fingerprints, nicks, countries and addresses to exclude</string>
    <string name="enter_exclude_nodes">Enter Exclude Nodes</string>
    <string name="strict_nodes">Strict Nodes</string>
    <string name="strict_nodes_description">Treat Exclude Nodes settings as a requirement for building all circuits. This may break functionality if no circuits can be built with your Exclude Nodes settings.</string>
    <string name="relays">Relays</string>
    <string name="relaying">Relaying</string>
    <string name="enable_your_device_to_be_a_non_exit_relay">Enable your device to be a non-exit relay</string>
    <string name="relay_port">Relay Port</string>
    <string name="listening_port_for_your_tor_relay">Listening port for your Tor relay</string>
    <string name="enter_or_port">Enter OR port</string>
    <string name="relay_nickname">Relay nickname</string>
    <string name="the_nickname_for_your_tor_relay">The nickname for your Tor relay</string>
    <string name="enter_a_custom_relay_nickname">Enter a custom relay nickname</string>
    <string name="enter_relay_contact_info">Enter your e-mail and be aware it will be published</string>
    <string name="contact_info_for_your_tor_relay">Contact info for your Tor relay</string>
    <string name="relay_email">Relay contact info</string>
    <string name="reachable_addresses">Reachable Addresses</string>
    <string name="run_as_a_client_behind_a_firewall_with_restrictive_policies">Run as a client behind a firewall with restrictive policies</string>
    <string name="reachable_ports">Reachable Ports</string>
    <string name="ports_reachable_behind_a_restrictive_firewall">Ports reachable behind a restrictive firewall</string>
    <string name="enter_ports">Enter Ports</string>
    <string name="enable_debug_log_to_output_must_use_adb_or_alogcat_to_view_">Enable debug log to output (must use adb or aLogcat to view)</string>
    <string name="project_home">Project Home:</string>
    <string name="orbot_url" translatable="false">https://orbot.app/</string>
    <string name="orbot_github" translatable="false">https://github.com/guardianproject/orbot/</string>
    <string name="tor_url" translatable="false">Tor v%s: https://www.torproject.org</string>
    <string name="obfs4_url" translatable="false">Lyrebird v%s: https://gitlab.torproject.org/tpo/anti-censorship/pluggable-transports/lyrebird</string>
    <string name="snowflake_url" translatable="false">Snowflake v%s: https://gitlab.torproject.org/tpo/anti-censorship/pluggable-transports/snowflake</string>
    <string name="event_url" translatable="false">libEvent v%s: https://github.com/libevent/libevent</string>
    <string name="openssl_url" translatable="false">OpenSSL v%s: http://www.openssl.org</string>
    <string name="zlib_url" translatable="false">Zlib v%s: https://github.com/madler/zlib</string>
    <string name="zstd_url" translatable="false">Zstd v%s: https://github.com/facebook/zstd</string>
    <string name="lzma_url" translatable="false">Lzma v%s: https://github.com/tukaani-project/xz</string>
    <string name="third_party_software">3rd-Party-Software: </string>
    <string name="version">Version:</string>
    <string name="license">License:</string>
    <string name="set_locale_title">Language</string>
    <string name="pref_open_proxy_on_all_interfaces_title">Open Proxy on All Interfaces</string>
    <string name="pref_open_proxy_on_all_interfaces_summary">Allow Wi-Fi peers, tethered devices and anyone else who can connect to your IP, to access Tor</string>
    <string name="pref_socks_title">Tor SOCKS</string>
    <string name="pref_socks_summary">Port that Tor offers its SOCKS proxy on (default: 9050 or 0 to disable)</string>
    <string name="pref_socks_dialog">SOCKS Port Config</string>
    <string name="pref_http_title">Tor HTTP</string>
    <string name="pref_http_summary">Port that Tor offers its HTTP proxy on (default: 8118 or 0 to disable)</string>
    <string name="pref_http_dialog">HTTP Port Config</string>
    <string name="pref_transport_title">Tor TransProxy Port</string>
    <string name="pref_transport_summary">Port that Tor offers its Transparent Proxy on (default: 9040 or 0 to disable)</string>
    <string name="pref_transport_dialog">TransProxy Port Config</string>
    <string name="pref_dnsport_title">Tor DNS Port</string>
    <string name="pref_dnsport_summary">Port that Tor offers its DNS on (default: 9053 or 0 to disable)</string>
    <string name="pref_dnsport_dialog">DNS Port Config</string>
    <string name="pref_torrc_title">Torrc Custom Config</string>
    <string name="pref_torrc_summary">EXPERTS ONLY: enter direct torrc config lines</string>
    <string name="pref_torrc_dialog">Custom Torrc</string>
    <string name="service_type">Service type</string>
    <string name="pref_isolate_dest">Isolate destination addresses</string>
    <string name="pref_isolate_dest_summary">Use a different circuit for each destination address</string>
    <string name="pref_isolate_port">Isolate destination ports</string>
    <string name="pref_isolate_port_summary">Use a different circuit for each destination port</string>
    <string name="pref_isolate_protocol">Isolate client protocols</string>
    <string name="pref_isolate_protocol_summary">Use a different circuit for each connecting protocol</string>
    <string name="pref_isolate_keep_alive">Keep isolated circuits alive</string>
    <string name="pref_isolate_keep_alive_summary">Keep isolated circuits alive that have at least one stream with SOCKS authentication active</string>
    <string name="pref_connection_padding">Connection padding</string>
    <string name="pref_connection_padding_summary">Always enables connection padding to defend against some forms of traffic analysis. Default: auto</string>
    <string name="pref_reduced_connection_padding">Reduced connection padding</string>
    <string name="pref_reduced_connection_padding_summary">Closes relay connections sooner and sends less padding packets to reduce data and battery usage</string>
    <string name="pref_circuit_padding">Circuit padding</string>
    <string name="pref_circuit_padding_summary">Enable circuit padding to defend against some forms of traffic analysis</string>
    <string name="pref_reduced_circuit_padding">Reduced circuit padding</string>
    <string name="pref_reduced_circuit_padding_summary">Use lower overhead padding algorithms to reduce data and battery usage</string>
    <string name="pref_prefer_ipv6">Prefer IPv6 connections</string>
    <string name="pref_prefer_ipv6_summary">Tells exits that IPv6 addresses are preferred</string>
    <string name="pref_disable_ipv4">Disable IPv4 connections</string>
    <string name="pref_disable_ipv4_summary">Tells exits not to connect to IPv4 addresses</string>
    <string name="user_services">User services</string>
    <string name="app_services">App services</string>
    <string name="snowflake_proxy_msg_title">Show Connection Notification</string>
    <string name="snowflake_proxy_msg_description">Show a message when you help someone circumvent censorship</string>
    <string name="volunteer_mode">Kindness Mode</string>
    <string name="power_user_mode">Power User Mode</string>
    <string name="power_user_description">For users familiar with Tor. Allows you to start Orbot without the VPN setting and shows open SOCKS and HTTP ports</string>
    <string name="setting_padding">Padding</string>
    <string name="setting_debug">Debug</string>
    <string name="pref_detect_root_summary">Warn on startup if root permissions are enabled on this device</string>
    <string name="pref_detect_root_title">Root Detection</string>
    <string name="note_snowflake_doesn_t_support_proxies">NOTE: Snowflake doesn\'t support proxies. Proxy settings will be ignored with Snowflake bridges.</string>
    <string name="setting_app_icon_title">App Icon</string>
    <string name="setting_app_icon_description">Choose how Orbot appears on your device</string>
    <string name="setting_block_screenshot_title">Block Screenshots</string>
    <string name="setting_block_screenshot_description">Prevents anyone from taking screenshots of this app</string>
    <string name="setting_unlock_pass_title">Lock Screen</string>
    <string name="setting_unlock_pass_description">Require your device\'s PIN, password, or swipe pattern to open Orbot</string>
    <string name="setting_unlock_with_biometrics_title">Use Biometrics (optional)</string>
    <string name="setting_unlock_with_biometrics_description">Unlock Orbot with your fingerprint or Face ID if setup on your device.</string>
</resources>