<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_marginTop="4dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="?dialogPreferredPadding"
        android:paddingEnd="?dialogPreferredPadding">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/wizard_details_msg"
            android:textColor="@android:color/white"
            android:textColorLink="@android:color/white" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/version"
            android:textColor="@color/panel_card_image"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/versionName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/project_home"
            android:textColor="@color/panel_card_image"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/orbot_url"
            android:textColor="@android:color/white"
            android:textColorLink="@android:color/white" />


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/orbot_github"
            android:textColor="@android:color/white"
            android:textColorLink="@android:color/white" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/third_party_software"
            android:textColor="@color/panel_card_image"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/tor_url"
            android:textColor="@android:color/white"
            android:textColorLink="@android:color/white" />

        <TextView
            android:id="@+id/tvObfs4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            tools:text="@string/obfs4_url"
            android:textColor="@android:color/white"
            android:textColorLink="@android:color/white" />

        <TextView
            android:id="@+id/tvSnowflake"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            tools:text="@string/snowflake_url"
            android:textColor="@android:color/white"
            android:textColorLink="@android:color/white" />

        <TextView
            android:id="@+id/tvEvent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/event_url"
            android:textColor="@android:color/white"
            android:textColorLink="@android:color/white" />

        <TextView
            android:id="@+id/tvOpenssl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/openssl_url"
            android:textColor="@android:color/white"
            android:textColorLink="@android:color/white" />

        <TextView
            android:id="@+id/tvZlib"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/zlib_url"
            android:textColor="@android:color/white"
            android:textColorLink="@android:color/white" />

        <TextView
            android:id="@+id/tvZstd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/zstd_url"
            android:textColor="@android:color/white"
            android:textColorLink="@android:color/white" />

        <TextView
            android:id="@+id/tvLzma"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/lzma_url"
            android:textColor="@android:color/white"
            android:textColorLink="@android:color/white" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/license"
            android:textColor="@color/panel_card_image"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/aboutother"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:textColor="@android:color/white"
            android:textColorLink="@android:color/white" />
    </LinearLayout>
</ScrollView>

