<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.torproject.android.ui.v3onionservice.OnionServiceActivity"
    tools:showIn="@layout/activity_hosted_services">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/service_type" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButtonGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/radioUserServices"
            style="@style/SegmentedButtonStyle"
            android:backgroundTint="@color/orbot_btn_enabled_purple"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user_services"
            app:cornerRadius="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/radioAppServices"
            style="@style/SegmentedButtonStyle"
            android:backgroundTint="@color/orbot_btn_disable_grey"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_services"
            app:cornerRadius="10dp" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <ListView
        android:id="@+id/onion_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>